--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,6 +11,8 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {% block body %}
+            Nathan Dilhan : salut
+        {% endblock %}
     </body>
 </html>
